<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".registration.RegistrationFragment">

        <EditText
            android:id="@+id/input_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.080"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <EditText
            android:id="@+id/input_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/surname"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/input_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/input_name"
            app:layout_constraintTop_toBottomOf="@+id/input_name"
            app:layout_constraintVertical_bias="0.001" />

        <EditText
            android:id="@+id/input_patronym"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:hint="@string/patronym"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/input_surname"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/input_surname"
            app:layout_constraintTop_toBottomOf="@+id/input_surname"
            app:layout_constraintVertical_bias="0.001" />

        <ImageButton
            android:id="@+id/button_profilepic"
            android:layout_width="149dp"
            android:layout_height="153dp"
            android:src="@android:drawable/ic_menu_gallery"
            app:layout_constraintBottom_toTopOf="@+id/input_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.546" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="184dp"
            android:layout_height="94dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/input_patronym"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/input_patronym"
            app:layout_constraintTop_toBottomOf="@+id/input_patronym"
            app:layout_constraintVertical_bias="0.08">

            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>

        <EditText
            android:id="@+id/input_age"
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:ems="2"
            android:hint="@string/age"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.475"
            app:layout_constraintStart_toEndOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/input_patronym"
            app:layout_constraintVertical_bias="0.190" />

        <EditText
            android:id="@+id/input_town"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/town"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/input_patronym"
            app:layout_constraintHorizontal_bias="0.078"
            app:layout_constraintStart_toStartOf="@+id/input_patronym"
            app:layout_constraintTop_toBottomOf="@+id/input_patronym"
            app:layout_constraintVertical_bias="0.400" />

        <EditText
            android:id="@+id/input_street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/street"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/input_town"
            app:layout_constraintHorizontal_bias="0.078"
            app:layout_constraintStart_toStartOf="@+id/input_town"
            app:layout_constraintTop_toBottomOf="@+id/input_town"
            app:layout_constraintVertical_bias="0.001" />

        <EditText
            android:id="@+id/input_building"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:hint="@string/building"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/input_flat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.281"
            app:layout_constraintStart_toEndOf="@+id/input_town"
            app:layout_constraintTop_toTopOf="@+id/input_town"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/input_flat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:hint="@string/flat"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@+id/input_street"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.281"
            app:layout_constraintStart_toEndOf="@+id/input_street"
            app:layout_constraintTop_toTopOf="@+id/input_street"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/input_organization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/organization"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/input_street"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/input_street"
            app:layout_constraintTop_toBottomOf="@+id/input_street"
            app:layout_constraintVertical_bias="0.4" />

        <EditText
            android:id="@+id/input_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/post"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/input_organization"
            app:layout_constraintStart_toStartOf="@+id/input_organization"
            app:layout_constraintTop_toBottomOf="@+id/input_organization" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/input_organization"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.331"
            app:layout_constraintStart_toEndOf="@+id/input_organization"
            app:layout_constraintTop_toTopOf="@+id/input_organization"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/cancel"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/input_post"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.331"
            app:layout_constraintStart_toEndOf="@+id/input_post"
            app:layout_constraintTop_toTopOf="@+id/input_post"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/text_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo"
            app:layout_constraintBottom_toTopOf="@+id/button_profilepic"
            app:layout_constraintEnd_toEndOf="@+id/button_profilepic"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/button_profilepic"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
